# CMakeProject

./: CMakeLists.txt  Dockerfile  Dockerfile.agent.linux  Dockerfile.linux  Jenkinsfile
app_project/: CMakeLists.txt
app_project/src/: App.cpp
lib_project/: CMakeLists.txt
lib_project/include/: CurlHttpClient.h  FileSinkFactory.h  HTTPLogger.h  IHttpClient.h  LogHelper.h  LoggerFactory.h  TCPLogger.h  TCPSinkFactory.h
lib_project/src/: CurlHttpClient.cpp  FileSinkFactory.cpp  HTTPLogger.cpp  LogHelper.cpp  LoggerFactory.cpp  TCPLogger.cpp  TCPSinkFactory.cpp
test_project/: CMakeLists.txt  CurlHttpClientTest.cpp  FileSinkFactoryTest.cpp  LogHelperTest.cpp  MockSink.h  TCPLoggerTest.cpp
test_project/include/: MockHttpClient.h
test_project/src/: HTTPLoggerTest.cpp  TCPSinkFactoryTest.cpp
